--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ repositories {
 }
 
 dependencies {
-	api project(':d4m.acc.access')
+	implementation project(':d4m.acc.access')
 	implementation project(':FHIRSDS')
 	implementation 'org.springframework.boot:spring-boot-starter-web:3.2.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
