--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 server.port=8888
+management.endpoints.web.exposure.include=health,info
+# Expose all actuator endpoints (for dev/testing)
+management.endpoints.web.exposure.include=*
 
+# Or to expose only health and info (more secure for prod)
+# management.endpoints.web.exposure.include=health,info
+
+# Customize health endpoint details
+management.endpoint.health.show-details=always
